# log-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design-doc.md
src/log_viewer/: data_model.py  geometry.py  log_parser.py  map_model.py  replay_log.py  scene_model.py  viewer.py  xodr_parser.py
tests/: dummy_log.json  test_run.py  test_xodr_elevation.py  test_xodr_sampling.py
