[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log_viewer"
version = "0.1.0"
description = "Log Viewer based on OpenDRIVE and Rerun SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rerun-sdk>=0.15.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
log-viewer-replay = "log_viewer.replay_log:main"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "D"] # Error, pyflakes, docstrings
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
